49
================

28/08/24 Refactor health and identification #1103
23/08/24 PetFBI: switch to send stray/holds instead of adoptable animals
23/08/24 Refactor/simplify rendering of additional fields #1103
22/08/24 Export animals as CSV: Include ANIMALID column for cross referencing
22/08/24 FindPet microchip registration initial implementation #1500
20/08/24 Fix ambiguous vacc/test dates in mobile UI
20/08/24 Disable table reflow by default after large number of complaints #1103
19/08/24 Refactor broke storing year/unique code when generating new #1103
17/08/24 Allow table reflow to be disabled, fix for filters  when reflowed #1103
16/08/24 Refactor fields_render into separate render_widget methods #1103
16/08/24 Fix layout of additional sliders for mobile #1103
15/08/24 Shelterview: Add "date brought in" and "last change date" modes #1512
15/08/24 Hide entry type column from entry history if disabled #1525
15/08/24 Support xbutton/xmarkup in all widgets, size choosers on mobile #1103
15/08/24 Querybuilder: Vaccination expiry date in animal reports
15/08/24 Querybuilder: Include DateExpires in medical reports
15/08/24 Fix bulk change animals layout #1103
14/08/24 Mobile friendly layout for find event, person waitinglist, incident #1103
14/08/24 Mobile UI: bug where add animal/shelter code not sent
14/08/24 Mobile friendly layout for find animal, find lost/found #1103
14/08/24 Use 3 col layout for animal details with 3rd for additional #1103
13/08/24 Use table reflow widget for portrait smartphone browsers #1103
13/08/24 Use bootstrap grids to make a start on fix mobile layout #1103
12/08/24 Fix for iPhone 17.3+ uploading images with no mimetype
12/08/24 Querybuilder: Add additional field date range criteria
12/08/24 Mobile UI: Hide disabled fields #1521
12/08/24 Bulk change animals: Hide disabled fields and areas without permission #1520
12/08/24 Online forms: Creating reserves, set additional field values form the form #1523