@@ -1,6 +1,7 @@
 49
 ================
 
+28/08/24 Fix "undefined" appearing when no additional fields present #1103
 28/08/24 Refactor health and identification #1103
 23/08/24 PetFBI: switch to send stray/holds instead of adoptable animals
 23/08/24 Refactor/simplify rendering of additional fields #1103
